sdinmotion/sdinmotionapp/azure-migration/nsg-rules-bitrix.json
[
  {
    "access": "Allow",
    "destinationAddressPrefix": "*",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "22",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"b9fa306a-d6fc-4fa3-b213-3cb21af65f63\"",
    "id": "/subscriptions/41a1a89c-2a50-44b3-b917-d54b517783c2/resourceGroups/RG-BITRIX-PROD/providers/Microsoft.Network/networkSecurityGroups/nsg-sdinmotion-bitrix/securityRules/Allow-SSH",
    "name": "Allow-SSH",
    "priority": 1000,
    "protocol": "Tcp",
    "provisioningState": "Succeeded",
    "resourceGroup": "RG-BITRIX-PROD",
    "sourceAddressPrefix": "*",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  },
  {
    "access": "Allow",
    "destinationAddressPrefix": "*",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "80",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"b9fa306a-d6fc-4fa3-b213-3cb21af65f63\"",
    "id": "/subscriptions/41a1a89c-2a50-44b3-b917-d54b517783c2/resourceGroups/RG-BITRIX-PROD/providers/Microsoft.Network/networkSecurityGroups/nsg-sdinmotion-bitrix/securityRules/Allow-HTTP",
    "name": "Allow-HTTP",
    "priority": 1010,
    "protocol": "Tcp",
    "provisioningState": "Succeeded",
    "resourceGroup": "RG-BITRIX-PROD",
    "sourceAddressPrefix": "*",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  },
  {
    "access": "Allow",
    "destinationAddressPrefix": "*",
    "destinationAddressPrefixes": [],
    "destinationPortRange": "443",
    "destinationPortRanges": [],
    "direction": "Inbound",
    "etag": "W/\"b9fa306a-d6fc-4fa3-b213-3cb21af65f63\"",
    "id": "/subscriptions/41a1a89c-2a50-44b3-b917-d54b517783c2/resourceGroups/RG-BITRIX-PROD/providers/Microsoft.Network/networkSecurityGroups/nsg-sdinmotion-bitrix/securityRules/Allow-HTTPS",
    "name": "Allow-HTTPS",
    "priority": 1020,
    "protocol": "Tcp",
    "provisioningState": "Succeeded",
    "resourceGroup": "RG-BITRIX-PROD",
    "sourceAddressPrefix": "*",
    "sourceAddressPrefixes": [],
    "sourcePortRange": "*",
    "sourcePortRanges": [],
    "type": "Microsoft.Network/networkSecurityGroups/securityRules"
  }
]
